# Labled

./: .gitignore  .gitmodules  CMakeLists.txt  Labled.qbs  README.md  backend.cpp  backend.h  build_installer_linux.sh  build_installer_win32.cmd  common.cpp  common.hpp  converttool.cpp  converttool.hpp  croptool.cpp  croptool.h  imageloader.cpp  imageloader.h  main.cpp  main.qml  qml.qrc
cpp/: backend.cpp  backend.h  common.hpp  converttool.cpp  converttool.hpp  croptool.h  imageloader.cpp  imageloader.h  synetclassifier.cpp  synetclassifier.h  synetdetector.cpp  synetdetector.h  synetnetwork.cpp  synetnetwork.h
data/: clf_classes.txt  det_classes.txt
data/nets/: classifier.xml  detector.xml
installer/config/: config.xml
installer/linux/: build.sh
installer/win32/: build.cmd
point_labeling/: main.py  main.qml  main.qmlc
qml/: ColorChooseDialog.qml  ConfigurationMenu.qml  ConvertTool.qml  CropTool.qml  DialogWindow.qml  FileChooseDialog.qml  ImageDraw.qml  LabelChooseDialog.qml  LabelEditDialog.qml  LabelsMenu.qml  Position.qml  RectBoxItem.qml  SideMenu.qml  UnsavedChangesDialog.qml  main.qml
qml/common/: DialogWindow.qml  HorizontalLine.qml  VerticalLine.qml
qml/drawArea/: ImageDraw.qml  RectBoxItem.qml
qml/mainWindow/: LabelChooseDialog.qml  UnsavedChangesDialog.qml
qml/sideMenu/: ColorChooseDialog.qml  ConfigurationMenu.qml  DetectorChooseDialog.qml  LabelEditDialog.qml  LabelsMenu.qml  SideMenu.qml
